parser.output
Terminals unused in grammar

    TOKEN_INHERIT
    TOKEN_REAL


State 23 conflicts: 5 shift/reduce
State 29 conflicts: 5 shift/reduce
State 59 conflicts: 5 shift/reduce
State 89 conflicts: 5 shift/reduce
State 90 conflicts: 5 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_def
    2        | program class_def

    3 class_def: TOKEN_CLASS TOKEN_IDENTIFIER feature_block TOKEN_END

    4 feature_block: TOKEN_FEATURE feature_list

    5 feature_list: feature_or_attr
    6             | feature_list feature_or_attr

    7 feature_or_attr: TOKEN_IDENTIFIER TOKEN_COLON TOKEN_IDENTIFIER
    8                | TOKEN_IDENTIFIER TOKEN_COLON TOKEN_IDENTIFIER TOKEN_SEMI
    9                | feature

   10 feature: TOKEN_IDENTIFIER opt_locals TOKEN_DO stmt_list TOKEN_END

   11 opt_locals: ε
   12           | TOKEN_LOCAL local_decl_list

   13 local_decl_list: local_decl
   14                | local_decl_list local_decl

   15 local_decl: id_list TOKEN_COLON TOKEN_IDENTIFIER
   16           | id_list TOKEN_COLON TOKEN_IDENTIFIER TOKEN_SEMI

   17 id_list: TOKEN_IDENTIFIER
   18        | id_list TOKEN_COMMA TOKEN_IDENTIFIER

   19 stmt_list: ε
   20          | stmt_item
   21          | stmt_list stmt_item

   22 stmt_item: stmt
   23          | stmt TOKEN_SEMI

   24 stmt: TOKEN_IDENTIFIER TOKEN_ASSIGN expr
   25     | if_stmt
   26     | loop_stmt
   27     | print_stmt
   28     | TOKEN_CREATE TOKEN_IDENTIFIER
   29     | TOKEN_IDENTIFIER TOKEN_DOT TOKEN_IDENTIFIER TOKEN_ASSIGN expr
   30     | TOKEN_IDENTIFIER TOKEN_DOT TOKEN_IDENTIFIER

   31 if_stmt: TOKEN_IF expr TOKEN_THEN stmt_list TOKEN_ELSE stmt_list TOKEN_END
   32        | TOKEN_IF expr TOKEN_THEN stmt_list TOKEN_END

   33 loop_stmt: TOKEN_FROM stmt_list TOKEN_UNTIL expr TOKEN_LOOP stmt_list TOKEN_END

   34 print_stmt: TOKEN_PRINT TOKEN_LPAREN expr TOKEN_RPAREN

   35 expr: expr TOKEN_PLUS expr
   36     | expr TOKEN_MINUS expr
   37     | expr TOKEN_MUL expr
   38     | expr TOKEN_DIV expr
   39     | expr TOKEN_EQUAL expr
   40     | expr TOKEN_LT expr
   41     | expr TOKEN_GT expr
   42     | expr TOKEN_LE expr
   43     | expr TOKEN_GE expr
   44     | TOKEN_MINUS expr
   45     | TOKEN_LPAREN expr TOKEN_RPAREN
   46     | TOKEN_INTEGER
   47     | TOKEN_STRING
   48     | TOKEN_IDENTIFIER TOKEN_DOT TOKEN_IDENTIFIER
   49     | TOKEN_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_CLASS (258) 3
    TOKEN_INHERIT (259)
    TOKEN_FEATURE (260) 4
    TOKEN_DO (261) 10
    TOKEN_END (262) 3 10 31 32 33
    TOKEN_IF (263) 31 32
    TOKEN_THEN (264) 31 32
    TOKEN_ELSE (265) 31
    TOKEN_FROM (266) 33
    TOKEN_UNTIL (267) 33
    TOKEN_LOOP (268) 33
    TOKEN_CREATE (269) 28
    TOKEN_LOCAL (270) 12
    TOKEN_PRINT (271) 34
    TOKEN_ASSIGN (272) 24 29
    TOKEN_LE (273) 42
    TOKEN_GE (274) 43
    TOKEN_EQUAL (275) 39
    TOKEN_LT (276) 40
    TOKEN_GT (277) 41
    TOKEN_LPAREN (278) 34 45
    TOKEN_RPAREN (279) 34 45
    TOKEN_SEMI (280) 8 16 23
    TOKEN_DOT (281) 29 30 48
    TOKEN_PLUS (282) 35
    TOKEN_MINUS (283) 36 44
    TOKEN_MUL (284) 37
    TOKEN_DIV (285) 38
    TOKEN_COLON (286) 7 8 15 16
    TOKEN_COMMA (287) 18
    TOKEN_IDENTIFIER <sval> (288) 3 7 8 10 15 16 17 18 24 28 29 30 48 49
    TOKEN_INTEGER <ival> (289) 46
    TOKEN_REAL (290)
    TOKEN_STRING <sval> (291) 47
    UMINUS (292)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program <node> (39)
        on left: 1 2
        on right: 0 2
    class_def <node> (40)
        on left: 3
        on right: 1 2
    feature_block <node> (41)
        on left: 4
        on right: 3
    feature_list <node> (42)
        on left: 5 6
        on right: 4 6
    feature_or_attr <node> (43)
        on left: 7 8 9
        on right: 5 6
    feature <node> (44)
        on left: 10
        on right: 9
    opt_locals <node> (45)
        on left: 11 12
        on right: 10
    local_decl_list <node> (46)
        on left: 13 14
        on right: 12 14
    local_decl <node> (47)
        on left: 15 16
        on right: 13 14
    id_list <node> (48)
        on left: 17 18
        on right: 15 16 18
    stmt_list <node> (49)
        on left: 19 20 21
        on right: 10 21 31 32 33
    stmt_item <node> (50)
        on left: 22 23
        on right: 20 21
    stmt <node> (51)
        on left: 24 25 26 27 28 29 30
        on right: 22 23
    if_stmt <node> (52)
        on left: 31 32
        on right: 25
    loop_stmt <node> (53)
        on left: 33
        on right: 26
    print_stmt <node> (54)
        on left: 34
        on right: 27
    expr <node> (55)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 24 29 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45


State 0

    0 $accept: • program $end

    TOKEN_CLASS  shift, and go to state 1

    program    go to state 2
    class_def  go to state 3


State 1

    3 class_def: TOKEN_CLASS • TOKEN_IDENTIFIER feature_block TOKEN_END

    TOKEN_IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: program • $end
    2 program: program • class_def

    $end         shift, and go to state 5
    TOKEN_CLASS  shift, and go to state 1

    class_def  go to state 6


State 3

    1 program: class_def •

    $default  reduce using rule 1 (program)


State 4

    3 class_def: TOKEN_CLASS TOKEN_IDENTIFIER • feature_block TOKEN_END

    TOKEN_FEATURE  shift, and go to state 7

    feature_block  go to state 8


State 5

    0 $accept: program $end •

    $default  accept


State 6

    2 program: program class_def •

    $default  reduce using rule 2 (program)


State 7

    4 feature_block: TOKEN_FEATURE • feature_list

    TOKEN_IDENTIFIER  shift, and go to state 9

    feature_list     go to state 10
    feature_or_attr  go to state 11
    feature          go to state 12


State 8

    3 class_def: TOKEN_CLASS TOKEN_IDENTIFIER feature_block • TOKEN_END

    TOKEN_END  shift, and go to state 13


State 9

    7 feature_or_attr: TOKEN_IDENTIFIER • TOKEN_COLON TOKEN_IDENTIFIER
    8                | TOKEN_IDENTIFIER • TOKEN_COLON TOKEN_IDENTIFIER TOKEN_SEMI
   10 feature: TOKEN_IDENTIFIER • opt_locals TOKEN_DO stmt_list TOKEN_END

    TOKEN_LOCAL  shift, and go to state 14
    TOKEN_COLON  shift, and go to state 15

    $default  reduce using rule 11 (opt_locals)

    opt_locals  go to state 16


State 10

    4 feature_block: TOKEN_FEATURE feature_list •
    6 feature_list: feature_list • feature_or_attr

    TOKEN_IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 4 (feature_block)

    feature_or_attr  go to state 17
    feature          go to state 12


State 11

    5 feature_list: feature_or_attr •

    $default  reduce using rule 5 (feature_list)


State 12

    9 feature_or_attr: feature •

    $default  reduce using rule 9 (feature_or_attr)


State 13

    3 class_def: TOKEN_CLASS TOKEN_IDENTIFIER feature_block TOKEN_END •

    $default  reduce using rule 3 (class_def)


State 14

   12 opt_locals: TOKEN_LOCAL • local_decl_list

    TOKEN_IDENTIFIER  shift, and go to state 18

    local_decl_list  go to state 19
    local_decl       go to state 20
    id_list          go to state 21


State 15

    7 feature_or_attr: TOKEN_IDENTIFIER TOKEN_COLON • TOKEN_IDENTIFIER
    8                | TOKEN_IDENTIFIER TOKEN_COLON • TOKEN_IDENTIFIER TOKEN_SEMI

    TOKEN_IDENTIFIER  shift, and go to state 22


State 16

   10 feature: TOKEN_IDENTIFIER opt_locals • TOKEN_DO stmt_list TOKEN_END

    TOKEN_DO  shift, and go to state 23


State 17

    6 feature_list: feature_list feature_or_attr •

    $default  reduce using rule 6 (feature_list)


State 18

   17 id_list: TOKEN_IDENTIFIER •

    $default  reduce using rule 17 (id_list)


State 19

   12 opt_locals: TOKEN_LOCAL local_decl_list •
   14 local_decl_list: local_decl_list • local_decl

    TOKEN_IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 12 (opt_locals)

    local_decl  go to state 24
    id_list     go to state 21


State 20

   13 local_decl_list: local_decl •

    $default  reduce using rule 13 (local_decl_list)


State 21

   15 local_decl: id_list • TOKEN_COLON TOKEN_IDENTIFIER
   16           | id_list • TOKEN_COLON TOKEN_IDENTIFIER TOKEN_SEMI
   18 id_list: id_list • TOKEN_COMMA TOKEN_IDENTIFIER

    TOKEN_COLON  shift, and go to state 25
    TOKEN_COMMA  shift, and go to state 26


State 22

    7 feature_or_attr: TOKEN_IDENTIFIER TOKEN_COLON TOKEN_IDENTIFIER •
    8                | TOKEN_IDENTIFIER TOKEN_COLON TOKEN_IDENTIFIER • TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 27

    $default  reduce using rule 7 (feature_or_attr)


State 23

   10 feature: TOKEN_IDENTIFIER opt_locals TOKEN_DO • stmt_list TOKEN_END

    TOKEN_IF          shift, and go to state 28
    TOKEN_FROM        shift, and go to state 29
    TOKEN_CREATE      shift, and go to state 30
    TOKEN_PRINT       shift, and go to state 31
    TOKEN_IDENTIFIER  shift, and go to state 32

    TOKEN_IF          [reduce using rule 19 (stmt_list)]
    TOKEN_FROM        [reduce using rule 19 (stmt_list)]
    TOKEN_CREATE      [reduce using rule 19 (stmt_list)]
    TOKEN_PRINT       [reduce using rule 19 (stmt_list)]
    TOKEN_IDENTIFIER  [reduce using rule 19 (stmt_list)]
    $default          reduce using rule 19 (stmt_list)

    stmt_list   go to state 33
    stmt_item   go to state 34
    stmt        go to state 35
    if_stmt     go to state 36
    loop_stmt   go to state 37
    print_stmt  go to state 38


State 24

   14 local_decl_list: local_decl_list local_decl •

    $default  reduce using rule 14 (local_decl_list)


State 25

   15 local_decl: id_list TOKEN_COLON • TOKEN_IDENTIFIER
   16           | id_list TOKEN_COLON • TOKEN_IDENTIFIER TOKEN_SEMI

    TOKEN_IDENTIFIER  shift, and go to state 39


State 26

   18 id_list: id_list TOKEN_COMMA • TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 40


State 27

    8 feature_or_attr: TOKEN_IDENTIFIER TOKEN_COLON TOKEN_IDENTIFIER TOKEN_SEMI •

    $default  reduce using rule 8 (feature_or_attr)


State 28

   31 if_stmt: TOKEN_IF • expr TOKEN_THEN stmt_list TOKEN_ELSE stmt_list TOKEN_END
   32        | TOKEN_IF • expr TOKEN_THEN stmt_list TOKEN_END

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 46


State 29

   33 loop_stmt: TOKEN_FROM • stmt_list TOKEN_UNTIL expr TOKEN_LOOP stmt_list TOKEN_END

    TOKEN_IF          shift, and go to state 28
    TOKEN_FROM        shift, and go to state 29
    TOKEN_CREATE      shift, and go to state 30
    TOKEN_PRINT       shift, and go to state 31
    TOKEN_IDENTIFIER  shift, and go to state 32

    TOKEN_IF          [reduce using rule 19 (stmt_list)]
    TOKEN_FROM        [reduce using rule 19 (stmt_list)]
    TOKEN_CREATE      [reduce using rule 19 (stmt_list)]
    TOKEN_PRINT       [reduce using rule 19 (stmt_list)]
    TOKEN_IDENTIFIER  [reduce using rule 19 (stmt_list)]
    $default          reduce using rule 19 (stmt_list)

    stmt_list   go to state 47
    stmt_item   go to state 34
    stmt        go to state 35
    if_stmt     go to state 36
    loop_stmt   go to state 37
    print_stmt  go to state 38


State 30

   28 stmt: TOKEN_CREATE • TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 48


State 31

   34 print_stmt: TOKEN_PRINT • TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 49


State 32

   24 stmt: TOKEN_IDENTIFIER • TOKEN_ASSIGN expr
   29     | TOKEN_IDENTIFIER • TOKEN_DOT TOKEN_IDENTIFIER TOKEN_ASSIGN expr
   30     | TOKEN_IDENTIFIER • TOKEN_DOT TOKEN_IDENTIFIER

    TOKEN_ASSIGN  shift, and go to state 50
    TOKEN_DOT     shift, and go to state 51


State 33

   10 feature: TOKEN_IDENTIFIER opt_locals TOKEN_DO stmt_list • TOKEN_END
   21 stmt_list: stmt_list • stmt_item

    TOKEN_END         shift, and go to state 52
    TOKEN_IF          shift, and go to state 28
    TOKEN_FROM        shift, and go to state 29
    TOKEN_CREATE      shift, and go to state 30
    TOKEN_PRINT       shift, and go to state 31
    TOKEN_IDENTIFIER  shift, and go to state 32

    stmt_item   go to state 53
    stmt        go to state 35
    if_stmt     go to state 36
    loop_stmt   go to state 37
    print_stmt  go to state 38


State 34

   20 stmt_list: stmt_item •

    $default  reduce using rule 20 (stmt_list)


State 35

   22 stmt_item: stmt •
   23          | stmt • TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 54

    $default  reduce using rule 22 (stmt_item)


State 36

   25 stmt: if_stmt •

    $default  reduce using rule 25 (stmt)


State 37

   26 stmt: loop_stmt •

    $default  reduce using rule 26 (stmt)


State 38

   27 stmt: print_stmt •

    $default  reduce using rule 27 (stmt)


State 39

   15 local_decl: id_list TOKEN_COLON TOKEN_IDENTIFIER •
   16           | id_list TOKEN_COLON TOKEN_IDENTIFIER • TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 55

    $default  reduce using rule 15 (local_decl)


State 40

   18 id_list: id_list TOKEN_COMMA TOKEN_IDENTIFIER •

    $default  reduce using rule 18 (id_list)


State 41

   45 expr: TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 56


State 42

   44 expr: TOKEN_MINUS • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 57


State 43

   48 expr: TOKEN_IDENTIFIER • TOKEN_DOT TOKEN_IDENTIFIER
   49     | TOKEN_IDENTIFIER •

    TOKEN_DOT  shift, and go to state 58

    $default  reduce using rule 49 (expr)


State 44

   46 expr: TOKEN_INTEGER •

    $default  reduce using rule 46 (expr)


State 45

   47 expr: TOKEN_STRING •

    $default  reduce using rule 47 (expr)


State 46

   31 if_stmt: TOKEN_IF expr • TOKEN_THEN stmt_list TOKEN_ELSE stmt_list TOKEN_END
   32        | TOKEN_IF expr • TOKEN_THEN stmt_list TOKEN_END
   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr

    TOKEN_THEN   shift, and go to state 59
    TOKEN_LE     shift, and go to state 60
    TOKEN_GE     shift, and go to state 61
    TOKEN_EQUAL  shift, and go to state 62
    TOKEN_LT     shift, and go to state 63
    TOKEN_GT     shift, and go to state 64
    TOKEN_PLUS   shift, and go to state 65
    TOKEN_MINUS  shift, and go to state 66
    TOKEN_MUL    shift, and go to state 67
    TOKEN_DIV    shift, and go to state 68


State 47

   21 stmt_list: stmt_list • stmt_item
   33 loop_stmt: TOKEN_FROM stmt_list • TOKEN_UNTIL expr TOKEN_LOOP stmt_list TOKEN_END

    TOKEN_IF          shift, and go to state 28
    TOKEN_FROM        shift, and go to state 29
    TOKEN_UNTIL       shift, and go to state 69
    TOKEN_CREATE      shift, and go to state 30
    TOKEN_PRINT       shift, and go to state 31
    TOKEN_IDENTIFIER  shift, and go to state 32

    stmt_item   go to state 53
    stmt        go to state 35
    if_stmt     go to state 36
    loop_stmt   go to state 37
    print_stmt  go to state 38


State 48

   28 stmt: TOKEN_CREATE TOKEN_IDENTIFIER •

    $default  reduce using rule 28 (stmt)


State 49

   34 print_stmt: TOKEN_PRINT TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 70


State 50

   24 stmt: TOKEN_IDENTIFIER TOKEN_ASSIGN • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 71


State 51

   29 stmt: TOKEN_IDENTIFIER TOKEN_DOT • TOKEN_IDENTIFIER TOKEN_ASSIGN expr
   30     | TOKEN_IDENTIFIER TOKEN_DOT • TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 72


State 52

   10 feature: TOKEN_IDENTIFIER opt_locals TOKEN_DO stmt_list TOKEN_END •

    $default  reduce using rule 10 (feature)


State 53

   21 stmt_list: stmt_list stmt_item •

    $default  reduce using rule 21 (stmt_list)


State 54

   23 stmt_item: stmt TOKEN_SEMI •

    $default  reduce using rule 23 (stmt_item)


State 55

   16 local_decl: id_list TOKEN_COLON TOKEN_IDENTIFIER TOKEN_SEMI •

    $default  reduce using rule 16 (local_decl)


State 56

   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr
   45     | TOKEN_LPAREN expr • TOKEN_RPAREN

    TOKEN_LE      shift, and go to state 60
    TOKEN_GE      shift, and go to state 61
    TOKEN_EQUAL   shift, and go to state 62
    TOKEN_LT      shift, and go to state 63
    TOKEN_GT      shift, and go to state 64
    TOKEN_RPAREN  shift, and go to state 73
    TOKEN_PLUS    shift, and go to state 65
    TOKEN_MINUS   shift, and go to state 66
    TOKEN_MUL     shift, and go to state 67
    TOKEN_DIV     shift, and go to state 68


State 57

   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr
   44     | TOKEN_MINUS expr •

    $default  reduce using rule 44 (expr)


State 58

   48 expr: TOKEN_IDENTIFIER TOKEN_DOT • TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 74


State 59

   31 if_stmt: TOKEN_IF expr TOKEN_THEN • stmt_list TOKEN_ELSE stmt_list TOKEN_END
   32        | TOKEN_IF expr TOKEN_THEN • stmt_list TOKEN_END

    TOKEN_IF          shift, and go to state 28
    TOKEN_FROM        shift, and go to state 29
    TOKEN_CREATE      shift, and go to state 30
    TOKEN_PRINT       shift, and go to state 31
    TOKEN_IDENTIFIER  shift, and go to state 32

    TOKEN_IF          [reduce using rule 19 (stmt_list)]
    TOKEN_FROM        [reduce using rule 19 (stmt_list)]
    TOKEN_CREATE      [reduce using rule 19 (stmt_list)]
    TOKEN_PRINT       [reduce using rule 19 (stmt_list)]
    TOKEN_IDENTIFIER  [reduce using rule 19 (stmt_list)]
    $default          reduce using rule 19 (stmt_list)

    stmt_list   go to state 75
    stmt_item   go to state 34
    stmt        go to state 35
    if_stmt     go to state 36
    loop_stmt   go to state 37
    print_stmt  go to state 38


State 60

   42 expr: expr TOKEN_LE • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 76


State 61

   43 expr: expr TOKEN_GE • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 77


State 62

   39 expr: expr TOKEN_EQUAL • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 78


State 63

   40 expr: expr TOKEN_LT • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 79


State 64

   41 expr: expr TOKEN_GT • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 80


State 65

   35 expr: expr TOKEN_PLUS • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 81


State 66

   36 expr: expr TOKEN_MINUS • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 82


State 67

   37 expr: expr TOKEN_MUL • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 83


State 68

   38 expr: expr TOKEN_DIV • expr

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 84


State 69

   33 loop_stmt: TOKEN_FROM stmt_list TOKEN_UNTIL • expr TOKEN_LOOP stmt_list TOKEN_END

    TOKEN_LPAREN      shift, and go to state 41
    TOKEN_MINUS       shift, and go to state 42
    TOKEN_IDENTIFIER  shift, and go to state 43
    TOKEN_INTEGER     shift, and go to state 44
    TOKEN_STRING      shift, and go to state 45

    expr  go to state 85


State 70

   34 print_stmt: TOKEN_PRINT TOKEN_LPAREN expr • TOKEN_RPAREN
   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr

    TOKEN_LE      shift, and go to state 60
    TOKEN_GE      shift, and go to state 61
    TOKEN_EQUAL   shift, and go to state 62
    TOKEN_LT      shift, and go to state 63
    TOKEN_GT      shift, and go to state 64
    TOKEN_RPAREN  shift, and go to state 86
    TOKEN_PLUS    shift, and go to state 65
    TOKEN_MINUS   shift, and go to state 66
    TOKEN_MUL     shift, and go to state 67
    TOKEN_DIV     shift, and go to state 68


State 71

   24 stmt: TOKEN_IDENTIFIER TOKEN_ASSIGN expr •
   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr

    TOKEN_LE     shift, and go to state 60
    TOKEN_GE     shift, and go to state 61
    TOKEN_EQUAL  shift, and go to state 62
    TOKEN_LT     shift, and go to state 63
    TOKEN_GT     shift, and go to state 64
    TOKEN_PLUS   shift, and go to state 65
    TOKEN_MINUS  shift, and go to state 66
    TOKEN_MUL    shift, and go to state 67
    TOKEN_DIV    shift, and go to state 68

    $default  reduce using rule 24 (stmt)


State 72

   29 stmt: TOKEN_IDENTIFIER TOKEN_DOT TOKEN_IDENTIFIER • TOKEN_ASSIGN expr
   30     | TOKEN_IDENTIFIER TOKEN_DOT TOKEN_IDENTIFIER •

    TOKEN_ASSIGN  shift, and go to state 87

    $default  reduce using rule 30 (stmt)


State 73

   45 expr: TOKEN_LPAREN expr TOKEN_RPAREN •

    $default  reduce using rule 45 (expr)


State 74

   48 expr: TOKEN_IDENTIFIER TOKEN_DOT TOKEN_IDENTIFIER •

    $default  reduce using rule 48 (expr)


State 75

   21 stmt_list: stmt_list • stmt_item
   31 if_stmt: TOKEN_IF expr TOKEN_THEN stmt_list • TOKEN_ELSE stmt_list TOKEN_END
   32        | TOKEN_IF expr TOKEN_THEN stmt_list • TOKEN_END

    TOKEN_END         shift, and go to state 88
    TOKEN_IF          shift, and go to state 28
    TOKEN_ELSE        shift, and go to state 89
    TOKEN_FROM        shift, and go to state 29
    TOKEN_CREATE      shift, and go to state 30
    TOKEN_PRINT       shift, and go to state 31
    TOKEN_IDENTIFIER  shift, and go to state 32

    stmt_item   go to state 53
    stmt        go to state 35
    if_stmt     go to state 36
    loop_stmt   go to state 37
    print_stmt  go to state 38


State 76

   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   42     | expr TOKEN_LE expr •
   43     | expr • TOKEN_GE expr

    TOKEN_PLUS   shift, and go to state 65
    TOKEN_MINUS  shift, and go to state 66
    TOKEN_MUL    shift, and go to state 67
    TOKEN_DIV    shift, and go to state 68

    $default  reduce using rule 42 (expr)


State 77

   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr
   43     | expr TOKEN_GE expr •

    TOKEN_PLUS   shift, and go to state 65
    TOKEN_MINUS  shift, and go to state 66
    TOKEN_MUL    shift, and go to state 67
    TOKEN_DIV    shift, and go to state 68

    $default  reduce using rule 43 (expr)


State 78

   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   39     | expr TOKEN_EQUAL expr •
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr

    TOKEN_PLUS   shift, and go to state 65
    TOKEN_MINUS  shift, and go to state 66
    TOKEN_MUL    shift, and go to state 67
    TOKEN_DIV    shift, and go to state 68

    $default  reduce using rule 39 (expr)


State 79

   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   40     | expr TOKEN_LT expr •
   41     | expr • TOKEN_GT expr
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr

    TOKEN_PLUS   shift, and go to state 65
    TOKEN_MINUS  shift, and go to state 66
    TOKEN_MUL    shift, and go to state 67
    TOKEN_DIV    shift, and go to state 68

    $default  reduce using rule 40 (expr)


State 80

   35 expr: expr • TOKEN_PLUS expr
   36     | expr • TOKEN_MINUS expr
   37     | expr • TOKEN_MUL expr
   38     | expr • TOKEN_DIV expr
   39     | expr • TOKEN_EQUAL expr
   40     | expr • TOKEN_LT expr
   41     | expr • TOKEN_GT expr
   41     | expr TOKEN_GT expr •
   42     | expr • TOKEN_LE expr
   43     | expr • TOKEN_GE expr

    TOKEN_PLUS   shift, and go to state 65
    TOKEN_MINUS  shift, and go to state 66
    TOKEN_MUL    shift, and go to state 67
    TOKEN_DIV    shift, and go to state 68

    $default  reduce using rule 41 (expr)


State 81
